--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -21,8 +21,13 @@ localnet = []
 [dependencies]
 solana-program = "<1.17.0"
 spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
-spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}
-serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", features=["no-entrypoint", "program"] }
+spl-associated-token-account = { version = "2.2.0", features = [
+	"no-entrypoint",
+] }
+serum_dex = { version = "0.5.10", git = "https://github.com/weirdgiraffe/openbook-dex", features = [
+	"no-entrypoint",
+	"program",
+] }
 serde_json = { version = "1.0.56" }
 serde = { version = "1.0", features = ["derive"] }
 bincode = { version = "1.3.3" }
